<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.NhanVien.ThemNhanVien">
    <TextView
        style="@style/tieude"
        android:text="@string/suanhanvien"/>
    <TextView
        style="@style/textview"
        android:text="@string/manhanvien"/>
    <TextView
        style="@style/tvMaNhanVien"
        android:id="@+id/txtMaNhanVien"/>
    <TextView
        style="@style/textview"
        android:text="@string/tennhanvien"/>
    <EditText
        style="@style/edittext"
        android:id="@+id/txtTenNhanVien"/>
    <TextView
        style="@style/textview"
        android:text="@string/ngaysinh"/>
    <EditText
        style="@style/edittext"
        android:id="@+id/txtNgaySinh"/>
    <TextView
        style="@style/textview"
        android:text="@string/gioitinh"/>
    <RadioGroup
        style="@style/groupButTon">
        <RadioButton
            style="@style/rad"
            android:id="@+id/radNam"
            android:text="@string/nam"
            android:checked="true"/>
        <RadioButton
            style="@style/rad"
            android:id="@+id/radNu"
            android:text="@string/nu"/>
    </RadioGroup>
    <TextView
        style="@style/textview"
        android:text="@string/phongban"/>
    <Spinner
        style="@style/spin"
        android:id="@+id/spPhongBan"/>
    <TextView
        style="@style/textview"
        android:text="@string/hesoluong"/>
    <EditText
        style="@style/edittext"
        android:id="@+id/txtHeSoLuong"/>
    <TextView
        style="@style/tieude"
        android:text="@string/chucnang"/>
    <LinearLayout
        style="@style/linerlayout">
        <Button
            style="@style/button"
            android:id="@+id/btnSuaNhanVien"
            android:text="@string/luu"
            />
        <Button
            style="@style/button"
            android:id="@+id/btnThoat"
            android:text="@string/thoat"
            />
    </LinearLayout>
</LinearLayout>