<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.ChamCong.ThemChamCong">

    <TextView
        style="@style/tieude"
        android:text="@string/chamcong" />

    <LinearLayout style="@style/linerlayout">

        <TextView
            style="@style/textview2"
            android:text="@string/manhanvien" />

        <TextView
            android:id="@+id/tvMaNhanVien"
            style="@style/textview3" />
    </LinearLayout>

    <LinearLayout style="@style/linerlayout">

        <TextView
            style="@style/textview2"
            android:text="@string/tennhanvien" />

        <TextView
            android:id="@+id/tvTenNhanVien"
            style="@style/textview3" />
    </LinearLayout>

    <LinearLayout style="@style/linerlayout">

        <TextView
            style="@style/textview2"
            android:text="@string/thang" />

        <TextView
            android:id="@+id/txtNgayChamCong"
            style="@style/textview3" />
    </LinearLayout>

    <LinearLayout style="@style/linerlayout">

        <TextView
            style="@style/textview2"
            android:text="@string/songaycong" />

        <EditText
            android:id="@+id/txtSoNgayCong"
            style="@style/edittext" />
    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />

    <LinearLayout style="@style/linerlayout">

        <Button
            android:id="@+id/btnLuuChamCong"
            style="@style/button"
            android:layout_marginLeft="50sp"
            android:text="@string/luuchamcong" />

        <Button
            android:id="@+id/btnThoat"
            style="@style/button"
            android:layout_marginLeft="30sp"
            android:text="@string/thoat" />
    </LinearLayout>
</LinearLayout>