<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.NhanVien.ThemNhanVien">
    <TextView
       style="@style/tieude"
        android:text="@string/themnhanvien"/>

    <LinearLayout
        style="@style/linerlayout">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/cammera1"
            android:id="@+id/imgHinhDaiDien" />
        <Button
            android:text="Chọn Hình"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChonHinh"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/manhanvien"
            />

        <EditText

            android:id="@+id/txtMaNhanVien"
            style="@style/edittext"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
       style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/tennhanvien"/>

        <EditText
            android:id="@+id/txtTenNhanVien"
            style="@style/edittext"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/ngaysinh"/>

        <EditText
            android:id="@+id/txtNgaySinh"
            style="@style/edittext"
            android:layout_weight="1"
            android:inputType="date" />
        <Button
            style="@style/buttonDay"
            android:id="@+id/btnDay"
            android:background="@drawable/ngay"
            />
    </LinearLayout>
    <RadioGroup
       style="@style/groupButTon">
        <TextView
            style="@style/textview1"
            android:text="@string/gioitinh"/>
        <RadioButton
            style="@style/rad"
            android:id="@+id/radNam"
            android:text="@string/nam"
            android:checked="true"/>
        <RadioButton
            style="@style/rad"
            android:id="@+id/radNu"
            android:text="@string/nu"/>
    </RadioGroup>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/phongban"/>
    <Spinner
        style="@style/spin"
        android:id="@+id/spPhongBan"/>
    </LinearLayout>
    <LinearLayout
       style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/hesoluong"/>

        <EditText
            android:id="@+id/txtHeSoLuong"
            style="@style/edittext"
            android:inputType="number" />
    </LinearLayout>
    <TextView
        style="@style/tieude"
        android:text="@string/chucnang"/>
    <LinearLayout
        style="@style/linerlayout">
        <Button
            style="@style/buttonluu"
            android:id="@+id/btnSuaNhanVien"
            android:text="@string/luunhanvien"
            />
        <Button
            style="@style/buttonhuy"
            android:id="@+id/btnThoat"
            android:text="@string/thoat"
            />
    </LinearLayout>
</LinearLayout>