<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.TamUng.SuaTamUng">

    <TextView
        style="@style/tieude"
        android:text="@string/suatamung"/>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/sophieu"/>
        <TextView
            style="@style/edittext"
            android:id="@+id/tvSoPhieu"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/manhanvien"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvMaNhanVien"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/tennhanvien"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvTenNhanVien"></TextView>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/ngayung"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvNgayUng"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/sotien"/>
        <EditText
            style="@style/edittext"
            android:id="@+id/txtSoTien"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <Button
            style="@style/button"
            android:id="@+id/btnTamUng"
            android:text="@string/luutamung"
            android:layout_marginLeft="80sp"
            />
        <Button
            style="@style/button"
            android:id="@+id/btnThoat"
            android:layout_marginLeft="30sp"
            android:text="@string/thoat"
            />
    </LinearLayout>
</LinearLayout>