<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
   style="@style/tieude"
    android:text="@string/thongke"/>

    <LinearLayout
       style="@style/linerlayout">
        <TextView
           style="@style/textview2"
            android:text="@string/manhanvien"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvMaNhanVien"
            android:text="NV01"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/tennhanvien"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvTenNhanVien"
            android:text="Trần Bình An"/>
    </LinearLayout>

    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/phongban"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvTenPhongBan"
            android:text="Nhân Sự"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/hesoluong"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvHeSoLuong"
            android:text="250000"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/songaycong"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvSoNgayCong"
            android:text="26"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/tamung"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvTamUng"
            android:text="500000"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/thoigiancham"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvThoiGianCham"
            android:text="08/2020"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview2"
            android:text="@string/luong"/>
        <TextView
            style="@style/textview1"
            android:id="@+id/tvLuong"
            android:text="50000000"/>
    </LinearLayout>
</LinearLayout>