<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.TamUng.ThemTamUng">

    <TextView
        style="@style/tieude"
        android:text="@string/tamung"/>
  <LinearLayout
     style="@style/linerlayout">
      <TextView
          style="@style/textview1"
          android:text="@string/sophieu"/>

      <EditText
          android:id="@+id/txtSoPhieu"
          style="@style/edittext"
          android:inputType="text" />
  </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/manhanvien"/>
        <TextView
            style="@style/textview3"
            android:id="@+id/tvMaNhanVien"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/tennhanvien"/>
    <TextView
        style="@style/textview3"
        android:id="@+id/tvTenNhanVien"></TextView>
    </LinearLayout>
    <LinearLayout
       style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/ngayung"/>

        <EditText
            android:id="@+id/tvNgayUng"
            style="@style/textview3"
            android:inputType="date" />
    </LinearLayout>
    <LinearLayout
       style="@style/linerlayout">
        <TextView
            style="@style/textview1"
            android:text="@string/sotien"/>

        <EditText
            android:id="@+id/txtSoTien"
            style="@style/edittext"
            android:inputType="numberSigned|number" />
    </LinearLayout>
    <LinearLayout
        style="@style/linerlayout">
        <Button
            style="@style/button"
            android:id="@+id/btnTamUng"
            android:text="@string/luutamung"
            android:layout_marginLeft="80sp"
            />
        <Button
            style="@style/button"
            android:id="@+id/btnThoat"
            android:layout_marginLeft="30sp"
            android:text="@string/thoat"
            />
    </LinearLayout>
</LinearLayout>