<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/imgHinh"
        android:src="@drawable/nam" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AEEA00"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMaNV"
            style="@style/tv_model"
            android:text="@string/manhanvien" />

        <TextView
            android:id="@+id/tvTenNV"
            style="@style/tv_model"
            android:text="@string/tennhanvien" />

        <TextView
            android:id="@+id/tvNgaySinh"
            style="@style/tv_model"
            android:text="@string/ngaysinh" />

        <TextView
            android:id="@+id/tvMaPB"
            style="@style/tv_model"
            android:text="@string/maphong" />

        <TextView
            android:id="@+id/tvLuong"
            style="@style/tv_model"
            android:text="@string/hesoluong" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AEEA00"
        android:orientation="vertical">
    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/imgSua"
        android:src="@drawable/chitiet1"/>
    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/imgXoa"
        android:src="@drawable/delete"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChamCong"
        android:text="@string/chamcong"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTamUng"
            android:text="@string/tamung"
            />
    </LinearLayout>
</LinearLayout>