<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.NhanVien.MainNhanVien">
    <TextView
        style="@style/tieude"
        android:text="@string/tieude1"/>
    <Button
        style="@style/buttonNhanVien"
        android:id="@+id/btnthemNhanVien"
        android:text="@string/tennhanvien"/>
    <TextView
       style="@style/tieude"
        android:text="@string/danhsachnhanvien"
        />
     <ListView
         style="@style/listview"
         android:id="@+id/lvNhanVien"/>

</LinearLayout>