<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:background="#AEEA00"
        android:layout_width="100sp"
        android:layout_height="60sp"
        android:id="@+id/imgHinh"
        android:src="@drawable/nam" />

    <TextView
        android:id="@+id/tvSoPhieu"
        android:background="#FFD600"
        style="@style/tv_model"
        android:text="@string/sophieu" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFD600"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMaNV"
            style="@style/tv_model"
            android:text="@string/manhanvien" />

        <TextView
            android:id="@+id/tvTenNV"
            style="@style/tv_model"
            android:text="@string/tennhanvien" />

        <TextView
            android:id="@+id/tvNgayUng"
            style="@style/tv_model"
            android:text="@string/ngayung" />

        <TextView
            android:id="@+id/tvSoTien"
            style="@style/tv_model"
            android:text="@string/sotien" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AEEA00"
        android:orientation="vertical">
        <ImageView
            android:layout_width="50sp"
            android:layout_height="40sp"
            android:id="@+id/imgTamUng"
            android:padding="5dp"
            android:src="@drawable/chitiet1"/>
        <ImageView
            android:layout_width="50sp"
            android:layout_height="40sp"
            android:padding="5dp"
            android:id="@+id/imgXoa"
            android:src="@drawable/delete"/>
    </LinearLayout>
</LinearLayout>