<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MenuManager">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginTop="100sp"
    android:text="Quan Lý Lương"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPhongBan"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginRight="100sp"
            android:background="@drawable/phongban" />

        <Button
            android:id="@+id/btnNhanVien"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:background="@drawable/nhanvien" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnChamCong"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginRight="100sp"
            android:text="@string/chamcong"/>

        <Button
            android:id="@+id/btnTamUng"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:text="@string/tamung"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnThongke"
        android:layout_marginTop="30sp"
        android:layout_width="100sp"
        android:layout_gravity="center"
        android:layout_height="100sp"
        android:text="@string/thongke"/>
</LinearLayout>